k8s/environments/logging/elk/kibana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  labels:
    env: production
    tier: backend
    app: kibana
    name: kibana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      env: production
      tier: backend
      app: kibana
      name: kibana-pod
  template:
    metadata:
      labels:
        env: production
        tier: backend
        app: kibana
        name: kibana-pod
    spec:
      nodeSelector:
        kibana: kibana
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.10.1
        ports:
        - containerPort: 5601
          name: http
        volumeMounts:
          - name: kibana-config-volumne
            mountPath: /usr/share/kibana/config/
      volumes:
      - name: kibana-config-volumne
        configMap:
          name: kibana-configmap
