k8s/environments/logging/elk/kibana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-00cbff553eb8318ef, subnet-034bd15305a16c645 # only private subnets
  labels:
    env: production
    tier: logging
    app: kibana
    name: kibana-ingress
spec:
  ingressClassName: alb
  rules:
#    - host: <ELK Kibana 도메인> # TODO
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port: 
                  number: 5601
